deploy: a8afa4c6c7354e42d4a8e861bffcc2ffc51e9e78

--- a/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html
+++ b/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Lecture 1 (Vectors)" href="../mm1/Lecture_1_Vectors.html" />
+    <link rel="next" title="&lt;no title&gt;" href="../mm1/Lecture_8_Modelling.html" />
     <link rel="prev" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -600,7 +600,7 @@ Eigenvectors:
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Basic_definitions_and_operations.html" title="previous page">Basic definitions and operations</a>
-    <a class='right-next' id="next-link" href="../mm1/Lecture_1_Vectors.html" title="next page">Lecture 1 (Vectors)</a>
+    <a class='right-next' id="next-link" href="../mm1/Lecture_8_Modelling.html" title="next page">&lt;no title&gt;</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
