--- a/mathematics/mm1/Lecture_1_Coordinate_Systems.html
+++ b/mathematics/mm1/Lecture_1_Coordinate_Systems.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="&lt;no title&gt;" href="Lecture_3_Vector_Calculus.html" />
-    <link rel="prev" title="&lt;no title&gt;" href="Lecture_2_Multivariable_Calculus.html" />
+    <link rel="next" title="&lt;no title&gt;" href="Lecture_4_Matrices_Linear_Algebra.html" />
+    <link rel="prev" title="&lt;no title&gt;" href="Lecture_4_Matrices.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -3756,8 +3756,8 @@ if (IPython.notebook.kernel != null) {
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Lecture_2_Multivariable_Calculus.html" title="previous page">&lt;no title&gt;</a>
-    <a class='right-next' id="next-link" href="Lecture_3_Vector_Calculus.html" title="next page">&lt;no title&gt;</a>
+    <a class='left-prev' id="prev-link" href="Lecture_4_Matrices.html" title="previous page">&lt;no title&gt;</a>
+    <a class='right-next' id="next-link" href="Lecture_4_Matrices_Linear_Algebra.html" title="next page">&lt;no title&gt;</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
