--- a/mathematics/mm1/Lecture_2_Multivariable_Calculus.html
+++ b/mathematics/mm1/Lecture_2_Multivariable_Calculus.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Lecture 1 (Coordinate Systems)" href="Lecture_1_Coordinate_Systems.html" />
+    <link rel="next" title="&lt;no title&gt;" href="Lecture_5_Eigenvalues.html" />
     <link rel="prev" title="Lecture 1 (Vectors)" href="Lecture_1_Vectors.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -309,7 +309,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Lecture_1_Vectors.html" title="previous page">Lecture 1 (Vectors)</a>
-    <a class='right-next' id="next-link" href="Lecture_1_Coordinate_Systems.html" title="next page">Lecture 1 (Coordinate Systems)</a>
+    <a class='right-next' id="next-link" href="Lecture_5_Eigenvalues.html" title="next page">&lt;no title&gt;</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
