--- a/mathematics/mm1/Lecture_3_Vector_Calculus.html
+++ b/mathematics/mm1/Lecture_3_Vector_Calculus.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="The Python Programming Language" href="../../coding/intro.html" />
-    <link rel="prev" title="Lecture 1 (Coordinate Systems)" href="Lecture_1_Coordinate_Systems.html" />
+    <link rel="prev" title="&lt;no title&gt;" href="Lecture_4_Matrices_Linear_Algebra.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -405,7 +405,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Lecture_1_Coordinate_Systems.html" title="previous page">Lecture 1 (Coordinate Systems)</a>
+    <a class='left-prev' id="prev-link" href="Lecture_4_Matrices_Linear_Algebra.html" title="previous page">&lt;no title&gt;</a>
     <a class='right-next' id="next-link" href="../../coding/intro.html" title="next page">The Python Programming Language</a>
 
     </div>
