--- a/mathematics/mm1/Lecture_1_Vectors.html
+++ b/mathematics/mm1/Lecture_1_Vectors.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="&lt;no title&gt;" href="Lecture_2_Multivariable_Calculus.html" />
-    <link rel="prev" title="Eigenvalues and eigenvectors" href="../linear_algebra/Eigenvalues_and_eigenvectors.html" />
+    <link rel="prev" title="&lt;no title&gt;" href="Lecture_7_ODEs.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -389,7 +389,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../linear_algebra/Eigenvalues_and_eigenvectors.html" title="previous page">Eigenvalues and eigenvectors</a>
+    <a class='left-prev' id="prev-link" href="Lecture_7_ODEs.html" title="previous page">&lt;no title&gt;</a>
     <a class='right-next' id="next-link" href="Lecture_2_Multivariable_Calculus.html" title="next page">&lt;no title&gt;</a>
 
     </div>
