deploy: be482cf80906fd5ba2dda27017ad07d23a193c80

--- a/mathematics/complex analysis/intro.html
+++ b/mathematics/complex analysis/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Complex plane" href="complex_plane.html" />
-    <link rel="prev" title="Review of tensors" href="../Tensors_Review.html" />
+    <link rel="prev" title="Lecture 1 (Coordinate Systems)" href="../Coordinate_Systems.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -99,6 +99,9 @@
     </li>
     <li class="">
       <a href="../Tensors_Review.html">Review of tensors</a>
+    </li>
+    <li class="">
+      <a href="../Coordinate_Systems.html">Lecture 1 (Coordinate Systems)</a>
     </li>
     <li class="active">
       <a href="">Complex Analysis</a>
@@ -309,7 +312,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Tensors_Review.html" title="previous page">Review of tensors</a>
+    <a class='left-prev' id="prev-link" href="../Coordinate_Systems.html" title="previous page">Lecture 1 (Coordinate Systems)</a>
     <a class='right-next' id="next-link" href="complex_plane.html" title="next page">Complex plane</a>
 
     </div>
