--- a/mathematics/Tensors_Review.html
+++ b/mathematics/Tensors_Review.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Complex Analysis" href="complex analysis/intro.html" />
+    <link rel="next" title="Lecture 1 (Coordinate Systems)" href="Coordinate_Systems.html" />
     <link rel="prev" title="Fourier Series" href="Fourier Series.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -99,6 +99,9 @@
     </li>
     <li class="active">
       <a href="">Review of tensors</a>
+    </li>
+    <li class="">
+      <a href="Coordinate_Systems.html">Lecture 1 (Coordinate Systems)</a>
     </li>
     <li class="">
       <a href="complex analysis/intro.html">Complex Analysis</a>
@@ -379,7 +382,7 @@ c_k \mathbf{\hat{e}}_k\cdot\mathbf{\hat{e}}_k=c_k=a_i b_j (\mathbf{\hat{e}}_i\ti
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Fourier Series.html" title="previous page">Fourier Series</a>
-    <a class='right-next' id="next-link" href="complex analysis/intro.html" title="next page">Complex Analysis</a>
+    <a class='right-next' id="next-link" href="Coordinate_Systems.html" title="next page">Lecture 1 (Coordinate Systems)</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
