--- a/mathematics/complex analysis/integrating.html
+++ b/mathematics/complex analysis/integrating.html
@@ -100,6 +100,9 @@
     <li class="">
       <a href="../Tensors_Review.html">Review of tensors</a>
     </li>
+    <li class="">
+      <a href="../Coordinate_Systems.html">Lecture 1 (Coordinate Systems)</a>
+    </li>
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
