--- a/mathematics/linear_algebra/Theory.html
+++ b/mathematics/linear_algebra/Theory.html
@@ -101,6 +101,9 @@
       <a href="../Tensors_Review.html">Review of tensors</a>
     </li>
     <li class="">
+      <a href="../Coordinate_Systems.html">Lecture 1 (Coordinate Systems)</a>
+    </li>
+    <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
     </li>
     <li class="">
