--- a/geosciences/Image_Filtering.html
+++ b/geosciences/Image_Filtering.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Constructing an energy balance model" href="Climate_Model.html" />
+    <link rel="next" title="Constructing a zero-dimensional energy balance model" href="Climate_Model.html" />
     <link rel="prev" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,7 +104,7 @@
       <a href="">Image Filtering</a>
     </li>
     <li class="">
-      <a href="Climate_Model.html">Constructing an energy balance model</a>
+      <a href="Climate_Model.html">Heat Capacity</a>
     </li>
     <li class="">
       <a href="Seismology.html">Downloading earthquake data</a>
@@ -554,7 +554,7 @@ Image dimension = (390, 556)
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="1D_Resistivity_Forward_Modelling.html" title="previous page">1D Resistivity Forward Modelling</a>
-    <a class='right-next' id="next-link" href="Climate_Model.html" title="next page">Constructing an energy balance model</a>
+    <a class='right-next' id="next-link" href="Climate_Model.html" title="next page">Constructing a zero-dimensional energy balance model</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
