--- a/geosciences/Image_Transformations_and_Orthorectification.html
+++ b/geosciences/Image_Transformations_and_Orthorectification.html
@@ -104,7 +104,7 @@
       <a href="Image_Filtering.html">Image Filtering</a>
     </li>
     <li class="">
-      <a href="Climate_Model.html">Heat Capacity</a>
+      <a href="Climate_Model.html">An oversimplified model</a>
     </li>
     <li class="">
       <a href="Seismology.html">Downloading earthquake data</a>
