--- a/geosciences/Seismology.html
+++ b/geosciences/Seismology.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
-    <link rel="prev" title="Constructing a zero-dimensional energy balance model" href="Climate_Model.html" />
+    <link rel="prev" title="Constructing an energy balance model from Planck’s response" href="Climate_Model.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -104,7 +104,7 @@
       <a href="Image_Filtering.html">Image Filtering</a>
     </li>
     <li class="">
-      <a href="Climate_Model.html">Heat Capacity</a>
+      <a href="Climate_Model.html">An oversimplified model</a>
     </li>
     <li class="active">
       <a href="">Downloading earthquake data</a>
@@ -626,7 +626,7 @@ To see all events call &#39;print(CatalogObject.__str__(print_all=True))&#39;
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Climate_Model.html" title="previous page">Constructing a zero-dimensional energy balance model</a>
+    <a class='left-prev' id="prev-link" href="Climate_Model.html" title="previous page">Constructing an energy balance model from Planck’s response</a>
     <a class='right-next' id="next-link" href="Cartography_Cartopy.html" title="next page">Creating maps in Cartopy</a>
 
     </div>
